Fix status light squishyness

--- a/web/css/base_common.css
+++ b/web/css/base_common.css
@@ -10,6 +10,8 @@
 .status-light {
     width: 16px;
     height: 16px;
+    min-width: 16px;
+
     border-radius: 50%;
     position: relative;
 
